[package]
name = "jpegfs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }

mozjpeg-sys = "2.2"
libc = "0.2"

argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
rand = "0.10"
rand_chacha = "0.10"
chacha20poly1305 = "0.10"

serde = "1.0"
postcard = { version = "1.1", features = ["use-std", "use-crc"] }  # When updating it must be made sure that the binary format does not change
crc = "3.4"
zerocopy = "0.8"

fuser = { version = "0.17", features = ["serializable"] }
parking_lot = "0.12"
simplelog = "0.12"
ctrlc = "3.4"
ratatui = "0.30"
crossterm = "0.29"
rayon = "1.11"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"

[profile.release]
debug = true
