[package]
name = "jpegfs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
postcard = { version = "1.1", features = ["use-std"] }

[dependencies.jpegfs]
path = ".."

[[bin]]
name = "owned_jpeg_read_write"
path = "src/owned_jpeg_read_write.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header_encode_decode"
path = "src/header_encode_decode.rs"
test = false
doc = false
bench = false
