[package]
name = "jpegfs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }
fuser = "0.17"
zerocopy = "0.8"

[dependencies.jpegfs]
path = ".."

[[bin]]
name = "owned_jpeg_read_write"
path = "src/owned_jpeg_read_write.rs"
test = false
doc = false
bench = false

[[bin]]
name = "owned_jpeg_lsb_roundtrip"
path = "src/owned_jpeg_lsb_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "filesystem_state_machine"
path = "src/filesystem_state_machine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store_block_persistence"
path = "src/store_block_persistence.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inode_structured_roundtrip"
path = "src/inode_structured_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inode_raw_roundtrip"
path = "src/inode_raw_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pager_state_machine"
path = "src/pager_state_machine.rs"
test = false
doc = false
bench = false
